@@ -28,4 +28,16 @@ describe "additional_view_directories plugin" do
     # Not in any, returns :views
     body('bogus').must_equal File.expand_path('spec/views/bogus.erb')
   end
+
+  it "keeps additional view directories in allowed_paths after reloading render plugin" do
+    app(:bare) do
+      plugin :render, :views=>'spec/views'
+      plugin :additional_view_directories, ['spec/views/about', 'spec/views/additional']
+    end
+
+    expected = ['spec/views', 'spec/views/about', 'spec/views/additional'].map{|x| File.expand_path(x)}
+    app.render_opts[:allowed_paths].must_equal expected
+    app.plugin :render
+    app.render_opts[:allowed_paths].must_equal expected
+  end
 end
